# moto

./: .bumpversion.cfg  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .gitpod.yml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGES  CLOUDFORMATION_COVERAGE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFIG_README.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COVERAGE.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  coverage.xml  failedtests  felipe_test.py  file.tmp  httpretty.py  implementation_coverage.py  index.html  kms_policy_enforcement_rubrics.md  pyproject.toml  pytest.ini  report.md  requirements-dev.txt  requirements-tests.txt  requirements.txt  (+13 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  data-update_config-managed-rules.yml  data-update_ec2-instance-offerings.yml  data-update_ec2-instance-types.yml  data-update_emr_instance_types.yml  data-update_iam-managed-policies.yml  data-update_ssm-default-amis.yml  data-update_ssm-default-parameters.yml  data-update_ssm-optimized-amis.yml  dependency_test.yml  dockertests.yml  payment_notification.yml  release.yml  release_dev.yml  test_cloudwatch.yml  test_outdated_versions.yml  test_sqs.yml  test_terraform.yml  tests_cdk.yml  tests_cli.yml  tests_decoratormode.yml  tests_proxymode.yml  tests_real_aws.yml  tests_sdk_cpp.yml  tests_sdk_dotnet.yml  tests_sdk_go.yml  tests_sdk_java.yml  tests_sdk_js.yml  tests_sdk_ruby.yml  tests_sdk_sagemaker.yml  tests_servermode.yml  tests_terraform_examples.yml  tests_without_docker.yml
.specstory/history/: 2025-06-08_07-18-improvements-for-kms-key-policy-enforcement.md
diffs/: models.py.diff.txt  policy.py.diff.txt
docs/: .readthedocs-custom-steps.yml  Makefile  conf.py  index.rst  make.bat  other_langs.rst  requirements.txt
docs/docs/: aws_config.rst  boto.rst  faq.rst  getting_started.rst  iam.rst  implemented_services.rst  moto_apis.rst  multi_account.rst  persistence.rst  proxy_mode.rst  releases.rst  server_mode.rst
moto/: __init__.py  aioserver.py  backend_index.py  backends.py  compat.py  configuration.ini  eventbridge-notification.ts  monitor_spot_instance_price.py  monkey_patch.py  moto_extension_with_callbacks.py  prettify_jinja_render.py  proxy.py  pyvenv.cfg  server.py  settings.py
moto/acm/: __init__.py  models.py  responses.py  urls.py  utils.py
moto/acmpca/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/amp/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/apigateway/: __init__.py  exceptions.py  models.py  responses.py  urls.py  utils.py
moto/apigatewaymanagementapi/: __init__.py  models.py  responses.py  urls.py
moto/apigatewayv2/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/appconfig/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/applicationautoscaling/: __init__.py  exceptions.py  models.py  responses.py  urls.py  utils.py
moto/appmesh/: dataclasses.py  exceptions.py  models.py  responses.py  spec_parsing.py  urls.py  utils.py
moto/appsync/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/athena/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/autoscaling/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/awslambda/: __init__.py  exceptions.py  models.py  policy.py  responses.py  urls.py  utils.py
moto/awslambda_simple/: __init__.py  models.py  responses.py  urls.py
moto/backup/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/batch/: __init__.py  exceptions.py  models.py  responses.py  urls.py  utils.py
moto/batch_simple/: README.md  __init__.py  models.py  responses.py  urls.py
moto/bedrock/: exceptions.py  models.py  responses.py  urls.py
moto/bedrockagent/: exceptions.py  models.py  responses.py  urls.py
moto/bedrockagentcore/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/bedrockagentcorecontrol/: exceptions.py  models.py  responses.py  urls.py
moto/budgets/: __init__.py  exceptions.py  models.py  responses.py
moto/ce/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/clouddirectory/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/cloudformation/: __init__.py  custom_model.py  exceptions.py  models.py  parsing.py  provisioner.py  responses.py  urls.py  utils.py
moto/cloudfront/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/cloudhsmv2/: exceptions.py  models.py  responses.py  urls.py
moto/cloudtrail/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/cloudwatch/: __init__.py  exceptions.py  metric_data_expression_parser.py  models.py  responses.py  urls.py  utils.py
moto/codebuild/: __init__.py  exceptions.py  models.py  responses.py
moto/codecommit/: __init__.py  exceptions.py  models.py  responses.py  urls.py
moto/codedeploy/: exceptions.py  models.py  responses.py  urls.py
moto/codepipeline/: __init__.py  exceptions.py  models.py  urls.py  (+1 more)
other_langs/: sqsSample.java  sqsSample.scala  test.js  test.rb
plugins/: call_plugin.py  cloud_vm_sim.py  plugin.py
scripts/: Hash_Table_Count.csv  bump_version  ci_moto_server.sh  ci_wait_for_server.py  cloudformation_coverage.py  dependency_test.sh  ec2_get_instance_type_offerings.py  emr_get_releases.py  get_amis.py  get_ec2_reserved_instances.py  get_instance_info.py  get_instance_types.py  implementation_coverage.py  import_sfn_parser.sh  int_test.sh  pull_down_aws_managed_rules.py  rds_describe_option_group_options.py  rds_get_orderable_db_cluster_options.py  scaffold.py  ssm_get_default_amis.py  ssm_get_default_params.py  ssm_get_default_patch_baselines.py  ssm_get_optimized_amis.py  update_backend_index.py  update_managed_policies.py  update_ssl_policies.py
tests/: Dockerfile  __init__.py  backport_assert_raises.py  compat.py  conftest.py  helpers.py  markers.py  terraform-tests.failures.txt  terraform-tests.success.txt
(+4193 files in other folders)
