[build-system]
requires = ["setuptools >= 40.6.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    # https://github.com/boto/boto3/issues/3889#issuecomment-2578155761
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"
]
markers = [
    "network: requires network connection",
    "requires_docker: requires running docker",
    "aws_verified: Verified against AWS, and should be able to run against AWS",
]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["I", "T201", "T203"]

