[metadata]
name = moto
version = 4.1.0.dev
long_description = file:README.md
long_description_content_type = text/markdown
author = Steve Pulec
author_email = spulec@gmail.com
url = https://github.com/getmoto/moto
license = Apache License 2.0
test_suite = tests
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing
keywords = aws ec2 s3 boto3 mock
project_urls =
    Documentation = http://docs.getmoto.org/en/latest/
    Issue tracker = https://github.com/getmoto/moto/issues
    Changelog = https://github.com/getmoto/moto/blob/master/CHANGELOG.md

[options]
python_requires = >=3.8
install_requires =
    boto3>=1.9.201
    botocore>=1.14.0
    cryptography>=3.3.1
    requests>=2.5,<2.32.0
    xmltodict
    werkzeug>=0.5,!=2.2.0,!=2.2.1
    python-dateutil<3.0.0,>=2.1
    responses>=0.15.0
    Jinja2>=2.10.1
package_dir =
    moto = moto
include_package_data = True

[options.package_data]
moto = py.typed

[options.extras_require]
all =
    antlr4-python3-runtime
    joserfc>=0.9.0
    jsonpath_ng
    docker>=3.0.0
    graphql-core
    PyYAML>=5.1
    cfn-lint>=0.40.0
    openapi-spec-validator>=0.5.0
    pyparsing>=3.0.7
    jsondiff>=1.1.2
    py-partiql-parser==0.5.5
    aws-xray-sdk!=0.96,>=0.93
    setuptools
    multipart
proxy =
    antlr4-python3-runtime
    joserfc>=0.9.0
    jsonpath_ng
    docker>=2.5.1
    graphql-core
    PyYAML>=5.1
    cfn-lint>=0.40.0
    openapi-spec-validator>=0.5.0
    pyparsing>=3.0.7
    jsondiff>=1.1.2
    py-partiql-parser==0.5.5
    aws-xray-sdk!=0.96,>=0.93
    setuptools
    multipart
server =
    antlr4-python3-runtime
    joserfc>=0.9.0
    jsonpath_ng
    docker>=3.0.0
    graphql-core
    PyYAML>=5.1
    cfn-lint>=0.40.0
    openapi-spec-validator>=0.5.0
    pyparsing>=3.0.7
    jsondiff>=1.1.2
    py-partiql-parser==0.5.5
    aws-xray-sdk!=0.96,>=0.93
    setuptools
    flask!=2.2.0,!=2.2.1
    flask-cors
acm =
acmpca =
amp =
apigateway =
    PyYAML>=5.1
    joserfc>=0.9.0
    openapi-spec-validator>=0.5.0
apigatewayv2 =
    PyYAML>=5.1
    openapi-spec-validator>=0.5.0
applicationautoscaling =
appsync = graphql-core
athena =
autoscaling =
awslambda = docker>=3.0.0
awslambda_simple =
backup =
batch = docker>=3.0.0
batch_simple =
budgets =
ce =
cloudformation =
    joserfc>=0.9.0
    docker>=3.0.0
    graphql-core
    PyYAML>=5.1
    cfn-lint>=0.40.0
    openapi-spec-validator>=0.5.0
    pyparsing>=3.0.7
    jsondiff>=1.1.2
    py-partiql-parser==0.5.5
    aws-xray-sdk!=0.96,>=0.93
    setuptools
cloudfront =
cloudtrail =
cloudwatch =
codebuild =
codecommit =
codepipeline =
cognitoidentity =
cognitoidp =
    joserfc>=0.9.0
comprehend =
config =
databrew =
datapipeline =
datasync =
dax =
dms =
ds =
dynamodb =
    docker>=3.0.0
    py-partiql-parser==0.5.5
dynamodbstreams =
    docker>=3.0.0
    py-partiql-parser==0.5.5
ebs =
ec2 =
ec2instanceconnect =
ecr =
ecs =
efs =
eks =
elasticache =
elasticbeanstalk =
elastictranscoder =
elb =
elbv2 =
emr =
emrcontainers =
emrserverless =
es =
events =
firehose =
forecast =
glacier =
glue = pyparsing>=3.0.7
greengrass =
guardduty =
iam =
inspector2 =
iot =
iotdata = jsondiff>=1.1.2
ivs =
kinesis =
kinesisvideo =
kinesisvideoarchivedmedia =
kms =
logs =
managedblockchain =
mediaconnect =
medialive =
mediapackage =
mediastore =
mediastoredata =
meteringmarketplace =
mq =
opsworks =
organizations =
panorama =
personalize =
pinpoint =
polly =
quicksight =
ram =
rds =
redshift =
redshiftdata =
rekognition =
resourcegroups =
resourcegroupstaggingapi =
    joserfc>=0.9.0
    docker>=3.0.0
    graphql-core
    PyYAML>=5.1
    cfn-lint>=0.40.0
    openapi-spec-validator>=0.5.0
    pyparsing>=3.0.7
    jsondiff>=1.1.2
    py-partiql-parser==0.5.5
route53 =
route53resolver =
s3 =
    PyYAML>=5.1
    py-partiql-parser==0.5.5
s3crc32c =
    PyYAML>=5.1
    py-partiql-parser==0.5.5
    crc32c
s3control =
sagemaker =
sdb =
scheduler =
secretsmanager =
servicediscovery =
servicequotas =
ses =
signer =
sns =
sqs =
ssm =
    PyYAML>=5.1
ssoadmin =
stepfunctions =
    antlr4-python3-runtime
    jsonpath_ng
sts =
support =
swf =
textract =
timestreamwrite =
transcribe =
wafv2 =
# XRay module uses pkg_resources, but doesn't have an explicit dependency listed.  This is fixed in 2.9.0:
# https://github.com/aws/aws-xray-sdk-python/issues/305
xray =
    aws-xray-sdk!=0.96,>=0.93
    setuptools

[options.entry_points]
console_scripts =
    moto_server = moto.server:main
    moto_proxy = moto.proxy:main

[bdist_wheel]
universal=1

[tool:pytest]
markers =
    network: requires network connection
    requires_docker: requires running docker
    aws_verified: Verified against AWS, and should be able to run against AWS

[coverage:run]
relative_files = True

[pylint.MASTER]
ignore-paths=moto/packages

[pylint.'MESSAGES CONTROL']
disable = W,C,R,E
enable = arguments-renamed, deprecated-module, function-redefined, redefined-outer-name, signature-differs

[mypy]
files= moto, tests/test_core, tests/test_batch_simple, tests/test_iotdata/
exclude = moto/stepfunctions/parser
show_column_numbers=True
show_error_codes = True
disable_error_code=abstract

disallow_any_unimported=False
disallow_any_expr=False
disallow_any_decorated=True
disallow_any_explicit=False
disallow_any_generics=True
disallow_subclassing_any=True

disallow_untyped_calls=True
disallow_untyped_defs=True
disallow_incomplete_defs=True
check_untyped_defs=True
disallow_untyped_decorators=True

no_implicit_optional=True
strict_optional=True

warn_redundant_casts=True
warn_unused_ignores=False
warn_no_return=True
warn_return_any=False
warn_unreachable=False

strict_equality=True
ignore_missing_imports=True
follow_imports=silent
